# super-search

./: .gitignore  CHANGELOG.md  CLI_GUIDE.md  README.md  TODO.md  cli.py  file_scanner.py  main.py  pyproject.toml  requirements.txt  test file.do
Python Code/: 20250123 - transformers approach.ipynb  20250124 - transformers approach.ipynb  INTEGRATION_DOCUMENTATION.md  INTEGRATION_SUMMARY.md  chunk_db.py  cli_search_demo.py  create_ann_index.py  create_bm25_index.py  create_database.py  final_integration_test.py  gui_app.py  gui_backend.py  gui_frontend.py  gui_tests.ipynb  gui_visualization.py  main.ipynb  playground.ipynb  preprocess.py  preprocess_fast.py  query.py  query_bm25.py  query_nn.py  search_log_20250730_153111.txt  test.py  testing docling.ipynb
Python Code/_archive/: 20250123 - transformers approach.ipynb  PDF Vector Database Semantic Search.ipynb  create_database.py  preprocess.ipynb  preprocess.py  testing docling.ipynb
Python Code/index_bm25/: corpus.jsonl  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  readme.txt
animal_index_bm25/: corpus.jsonl  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy
data/: Interpreting regression equations.docx
index_bm25/: corpus.jsonl  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy
scratch/: 32165.txt  32189.txt  32267.txt  32286.txt
src/: chunk_db.py  create_bm25_index.py  embedding_test.ipynb  file_scanner.py  indexes.py  initialize.py  queries.py  query_bm25.py  query_direct.py  query_nn.py  test queries.py  test.docx  testing.ipynb  utils.py
(+17 files in other folders)
